<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/texte"
        android:layout_width="165dp"
        android:layout_height="75dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="123dp"
        android:text="@string/texte"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Resultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/essaie"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texte"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="122dp"
        android:layout_height="64dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="144dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Resultat" />

    <Button
        android:id="@+id/button2"
        android:layout_width="155dp"
        android:layout_height="62dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="220dp"
        android:text="@string/recommencer"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Resultat"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button3"
        android:layout_width="143dp"
        android:layout_height="65dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="48dp"
        android:text="@string/quitter"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Resultat"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>